[tool.poetry]
name = "web-app-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "web_app_backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
websockets = "^12.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
